still working on features

--- a/Housing-Prices/notebook.ipynb
+++ b/Housing-Prices/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "14547152",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "2eacf41d",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "64eceafc",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "7c8041e8",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "4  1465  150730.079977"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "1176832b",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
        "[4 rows x 81 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "acf89644",
    "metadata": {},
    "outputs": [
@@ -605,12 +605,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "7aad5489",
    "metadata": {},
    "outputs": [],
    "source": [
-    "housing_data.drop(['PoolQC', 'MiscFeature', 'Alley', 'Fence', 'MasVnrType', 'FireplaceQu'], axis=1, inplace=True)\n"
+    "# dropping columns with too many missing values\n",
+    "housing_data = housing_data.drop(['PoolQC', 'MiscFeature', 'Alley', 'Fence', 'MasVnrType', 'FireplaceQu'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "09557173",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Attchd\n",
+       "1       Attchd\n",
+       "2       Attchd\n",
+       "3       Detchd\n",
+       "4       Attchd\n",
+       "         ...  \n",
+       "1455    Attchd\n",
+       "1456    Attchd\n",
+       "1457    Attchd\n",
+       "1458    Attchd\n",
+       "1459    Attchd\n",
+       "Name: GarageType, Length: 1460, dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#checking for values before imputing\n",
+    "housing_data.head(4)\n",
+    "housing_data['GarageType']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fc428d31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imputing missing values\n",
+    "housing_data['LotFrontage'] = housing_data['LotFrontage'].fillna(housing_data['LotFrontage'].median())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "efdd50fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GarageType\n",
+    "housing_data['GarageType'].nunique() # 6\n",
+    "housing_data['GarageType'].unique() # Attchd, Detchd, BuiltIn, Basment, CarPort, 2Types, NA\n",
+    "housing_data['GarageType'].value_counts()\n",
+    "mode_value = housing_data['GarageType'].mode()[0]\n",
+    "housing_data['GarageType'] = housing_data['GarageType'].fillna(mode_value)\n",
+    "housing_data['GarageType'] = housing_data['GarageType'].map({'Attchd':1, 'Detchd':2, 'BuiltIn':3, 'Basment':4, 'CarPort':5, '2Types':6})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e97a3366",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GarageYrBlt\n",
+    "housing_data['GarageYrBlt'].nunique() # 97\n",
+    "housing_data['GarageYrBlt'].unique()\n",
+    "housing_data['GarageYrBlt'].value_counts()\n",
+    "housing_data['GarageYrBlt'] = housing_data['GarageYrBlt'].fillna(housing_data['GarageYrBlt'].median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "9b5574a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GarageFinish\n",
+    "housing_data['GarageFinish'].nunique() # 3\n",
+    "housing_data['GarageFinish'].unique()\n",
+    "housing_data['GarageFinish'].value_counts()\n",
+    "housing_data['GarageFinish'] = housing_data['GarageFinish'].fillna(housing_data['GarageFinish'].mode()[0])\n",
+    "housing_data['GarageFinish'] = housing_data['GarageFinish'].map({'Unf':1, 'RFn':2, 'Fin':3})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "474f2d3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/11/hr72w2z52lg8rt9z9977f9vh0000gn/T/ipykernel_61882/2060532260.py:5: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  housing_data['GarageQual'] = housing_data['GarageQual'].fillna('TA', inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# GarageQual\n",
+    "housing_data['GarageQual'].nunique()\n",
+    "housing_data['GarageQual'].unique()\n",
+    "housing_data['GarageQual'].value_counts()\n",
+    "housing_data['GarageQual'] = housing_data['GarageQual'].fillna('TA', inplace=True)\n",
+    "housing_data['GarageQual'] = housing_data['GarageQual'].map({'Po':1, 'Fa':2, 'TA':3, 'Gd':4, 'Ex':5})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "bb13db50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['TA', 'Fa', nan, 'Gd', 'Po', 'Ex'], dtype=object)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# GarageCond\n",
+    "housing_data['GarageCond'].nunique()\n",
+    "housing_data['GarageCond'].unique()\n"
    ]
   }
  ],
