still working on features

--- a/Housing-Prices/notebook.ipynb
+++ b/Housing-Prices/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "14547152",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "2eacf41d",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "64eceafc",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "7c8041e8",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "4  1465  150730.079977"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "1176832b",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
        "[4 rows x 81 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "acf89644",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "7aad5489",
    "metadata": {},
    "outputs": [],
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "09557173",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "Name: GarageType, Length: 1460, dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "fc428d31",
    "metadata": {},
    "outputs": [],
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "efdd50fe",
    "metadata": {},
    "outputs": [],
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e97a3366",
    "metadata": {},
    "outputs": [],
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "9b5574a7",
    "metadata": {},
    "outputs": [],
@@ -706,54 +706,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "474f2d3e",
+   "execution_count": null,
+   "id": "90645b5f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/11/hr72w2z52lg8rt9z9977f9vh0000gn/T/ipykernel_61882/2060532260.py:5: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  housing_data['GarageQual'] = housing_data['GarageQual'].fillna('TA', inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# GarageQual\n",
-    "housing_data['GarageQual'].nunique()\n",
-    "housing_data['GarageQual'].unique()\n",
-    "housing_data['GarageQual'].value_counts()\n",
-    "housing_data['GarageQual'] = housing_data['GarageQual'].fillna('TA', inplace=True)\n",
-    "housing_data['GarageQual'] = housing_data['GarageQual'].map({'Po':1, 'Fa':2, 'TA':3, 'Gd':4, 'Ex':5})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "bb13db50",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['TA', 'Fa', nan, 'Gd', 'Po', 'Ex'], dtype=object)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# GarageCond\n",
-    "housing_data['GarageCond'].nunique()\n",
-    "housing_data['GarageCond'].unique()\n"
+    "# GarageQual and GarageCond\n",
+    "quality_map = {'NA': 0, 'Po':1, 'Fa':2, 'TA':3, 'Gd':4, 'Ex':5}\n",
+    "housing_data['GarageScore'] = (0.6*housing_data['GarageQual'].map(quality_map) + 0.4*housing_data['GarageCond'].map(quality_map))"
    ]
   }
  ],
