--- a/Housing-Prices/notebook.ipynb
+++ b/Housing-Prices/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "14547152",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2eacf41d",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "64eceafc",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7c8041e8",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "4  1465  150730.079977"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1176832b",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
        "[4 rows x 81 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "acf89644",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7aad5489",
    "metadata": {},
    "outputs": [],
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "09557173",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "Name: GarageType, Length: 1460, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "fc428d31",
    "metadata": {},
    "outputs": [],
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "efdd50fe",
    "metadata": {},
    "outputs": [],
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "e97a3366",
    "metadata": {},
    "outputs": [],
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9b5574a7",
    "metadata": {},
    "outputs": [],
@@ -706,14 +706,415 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "90645b5f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# GarageQual and GarageCond\n",
     "quality_map = {'NA': 0, 'Po':1, 'Fa':2, 'TA':3, 'Gd':4, 'Ex':5}\n",
-    "housing_data['GarageScore'] = (0.6*housing_data['GarageQual'].map(quality_map) + 0.4*housing_data['GarageCond'].map(quality_map))"
+    "housing_data['GarageScore'] = (0.6*housing_data['GarageQual'].map(quality_map) + 0.4*housing_data['GarageCond'].map(quality_map))\n",
+    "housing_data['GarageScore'] = housing_data['GarageScore'].fillna(0)\n",
+    "housing_data = housing_data.drop(['GarageQual', 'GarageCond'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8bf91d6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BsmtExposure    38\n",
+      "BsmtFinType2    38\n",
+      "BsmtQual        37\n",
+      "BsmtCond        37\n",
+      "BsmtFinType1    37\n",
+      "MasVnrArea       8\n",
+      "Electrical       1\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "na_counts = housing_data.isna().sum()\n",
+    "columnsWithNa = na_counts[na_counts > 0]\n",
+    "print(columnsWithNa.sort_values(ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c9cff112",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1\n",
+       "1       1\n",
+       "2       1\n",
+       "3       1\n",
+       "4       1\n",
+       "       ..\n",
+       "1455    1\n",
+       "1456    1\n",
+       "1457    1\n",
+       "1458    2\n",
+       "1459    1\n",
+       "Name: Electrical, Length: 1460, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_data['Electrical'].value_counts()\n",
+    "housing_data['Electrical'] = housing_data['Electrical'].fillna(housing_data['Electrical'].mode()[0])\n",
+    "mapping = {'SBrkr':1, 'FuseA':2, 'FuseF':3, 'FuseP':4, 'Mix':5}\n",
+    "housing_data['Electrical'] = housing_data['Electrical'].map(mapping)\n",
+    "housing_data[\"Electrical\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4dbb4437",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BsmtExposure    38\n",
+      "BsmtFinType2    38\n",
+      "BsmtQual        37\n",
+      "BsmtCond        37\n",
+      "BsmtFinType1    37\n",
+      "MasVnrArea       8\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "na_counts = housing_data.isna().sum()\n",
+    "columnsWithNa = na_counts[na_counts > 0]\n",
+    "print(columnsWithNa.sort_values(ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ef19f792",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_data['MasVnrArea'] = housing_data['MasVnrArea'].fillna(housing_data['MasVnrArea'].median())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a8833f79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mapping of basement features\n",
+    "bsmt_qual_map = {\n",
+    "    'Ex': 5,  \n",
+    "    'Gd': 4,\n",
+    "    'TA': 3,\n",
+    "    'Fa': 2,\n",
+    "    'Po': 1\n",
+    "}\n",
+    "bsmt_cond_map = {\n",
+    "    'Ex': 5,  \n",
+    "    'Gd': 4,  \n",
+    "    'TA': 3,  \n",
+    "    'Fa': 2,  \n",
+    "    'Po': 1   \n",
+    "}\n",
+    "bsmt_exposure_map = {\n",
+    "    'Gd': 4,\n",
+    "    'Av': 3,\n",
+    "    'Mn': 2,\n",
+    "    'No': 1\n",
+    "}\n",
+    "bsmt_fintype_map = {\n",
+    "    'GLQ': 6,  \n",
+    "    'ALQ': 5,\n",
+    "    'BLQ': 4,\n",
+    "    'Rec': 3,\n",
+    "    'LwQ': 2,\n",
+    "    'Unf': 1\n",
+    "}\n",
+    "housing_data[\"BsmtQual\"] = housing_data[\"BsmtQual\"].map(bsmt_qual_map)\n",
+    "housing_data[\"BsmtCond\"] = housing_data[\"BsmtCond\"].map(bsmt_cond_map)\n",
+    "housing_data[\"BsmtExposure\"] = housing_data[\"BsmtExposure\"].map(bsmt_exposure_map)\n",
+    "housing_data[\"BsmtFinType1\"] = housing_data[\"BsmtFinType1\"].map(bsmt_fintype_map)\n",
+    "housing_data[\"BsmtFinType2\"] = housing_data[\"BsmtFinType2\"].map(bsmt_fintype_map)\n",
+    "housing_data['BsmtScore'] = (\n",
+    "    housing_data['BsmtQual']*0.3 + housing_data['BsmtCond']*0.25 + housing_data['BsmtExposure']*0.1 +\n",
+    "    housing_data['BsmtFinType1']*0.3 + housing_data['BsmtFinType2']*0.05\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a00708de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BsmtScore       39\n",
+      "BsmtExposure    38\n",
+      "BsmtFinType2    38\n",
+      "BsmtQual        37\n",
+      "BsmtCond        37\n",
+      "BsmtFinType1    37\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "na_counts = housing_data.isna().sum()\n",
+    "columnsWithNa = na_counts[na_counts > 0]\n",
+    "print(columnsWithNa.sort_values(ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6d3f8cb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_data['BsmtScore'] = housing_data['BsmtScore'].fillna(0)\n",
+    "housing_data = housing_data.drop(['BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "667e7033",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series([], dtype: int64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "na_counts = housing_data.isna().sum()\n",
+    "columnsWithNa = na_counts[na_counts > 0]\n",
+    "print(columnsWithNa.sort_values(ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "71da8963",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>MSSubClass</th>\n",
+       "      <th>MSZoning</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>Street</th>\n",
+       "      <th>LotShape</th>\n",
+       "      <th>LandContour</th>\n",
+       "      <th>Utilities</th>\n",
+       "      <th>LotConfig</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ScreenPorch</th>\n",
+       "      <th>PoolArea</th>\n",
+       "      <th>MiscVal</th>\n",
+       "      <th>MoSold</th>\n",
+       "      <th>YrSold</th>\n",
+       "      <th>SaleType</th>\n",
+       "      <th>SaleCondition</th>\n",
+       "      <th>SalePrice</th>\n",
+       "      <th>GarageScore</th>\n",
+       "      <th>BsmtScore</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>60</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>8450</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Inside</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>208500</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>9600</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>FR2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>181500</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>60</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>11250</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>IR1</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Inside</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>223500</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>70</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>9550</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>IR1</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Corner</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Abnorml</td>\n",
+       "      <td>140000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.55</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 70 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id  MSSubClass MSZoning  LotFrontage  LotArea Street LotShape LandContour  \\\n",
+       "0   1          60       RL         65.0     8450   Pave      Reg         Lvl   \n",
+       "1   2          20       RL         80.0     9600   Pave      Reg         Lvl   \n",
+       "2   3          60       RL         68.0    11250   Pave      IR1         Lvl   \n",
+       "3   4          70       RL         60.0     9550   Pave      IR1         Lvl   \n",
+       "\n",
+       "  Utilities LotConfig  ... ScreenPorch PoolArea MiscVal MoSold YrSold  \\\n",
+       "0    AllPub    Inside  ...           0        0       0      2   2008   \n",
+       "1    AllPub       FR2  ...           0        0       0      5   2007   \n",
+       "2    AllPub    Inside  ...           0        0       0      9   2008   \n",
+       "3    AllPub    Corner  ...           0        0       0      2   2006   \n",
+       "\n",
+       "  SaleType  SaleCondition  SalePrice  GarageScore  BsmtScore  \n",
+       "0       WD         Normal     208500          3.0       3.90  \n",
+       "1       WD         Normal     181500          3.0       3.90  \n",
+       "2       WD         Normal     223500          3.0       4.00  \n",
+       "3       WD        Abnorml     140000          3.0       3.55  \n",
+       "\n",
+       "[4 rows x 70 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_data.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a61b448b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   }
  ],
